# global-temperature-visual

./: CLAUDE.md  README.md  pyproject.toml
src/: app.py  data_engine.py
src/static/css/: style.css
src/static/js/: city.js  city_temp_chart.js  dashboard.js  global_temp_chart.js  global_temp_line.js
src/templates/: index.html
tests/: api_test.py
